# ovira

./: .gitignore  README.md  start-server.sh
agent_universe/: .env  app-config-template.yaml  app-config.yaml  main.py  pyproject.toml
agent_universe/agents/: agents.py  orchestrator.py
agent_universe/config/: databases.py  models.py  settings.py
agent_universe/database/: models.py  mongodb.py
agent_universe/filter_protocol/: config.py  filter.py
agent_universe/prompts/: orchestrator_prompt.py  profile_guidance.py  system_prompts.py
agent_universe/utils/: helpers.py
coral-server/: .gitignore  Dockerfile  compose.yaml
coral-server/src/main/kotlin/org/coralprotocol/coralserver/routes/: SseRoutes.kt
data-updating/: Dockerfile  app-config-template.yaml  docker-compose.yaml  pyproject.toml  strategy_Stable Yield USDC.json  strategy_Stable Yield USDT.json  usdt123_strategy.json
data-updating/clients/: aiohttp.py  services_manager.py
data-updating/configs/: __init__.py  mongo_config.py  strategy_agent_config.py  vault_management_config.py
data-updating/data_aggregator/: aggregator.py
data-updating/engine/: earnings_updating.py  strategy_updating.py
data-updating/hooks/: error.py
data-updating/mongo/: schemas.py
data-updating/prefect/: deployments.py  monitors.py
data-updating/services/: base_singleton.py  http_request.py
ovira/: Anchor.toml  package.json
ovira/programs/ovira/: Cargo.toml
ovira/programs/ovira/src/: constant.rs  lib.rs  util.rs
ovira/programs/ovira/src/instructions/: deposit.rs  initialize.rs  mod.rs  withdraw.rs
ovira/programs/ovira/src/state/: mod.rs  user_position.rs  vault.rs
ovira/tests/: ovira.ts
raw-data/: .env.example  .gitignore  app-config.yaml  docker-compose.yaml  pyproject.toml  test.py
raw-data/clients/: __init__.py  mongo_client.py  services.py
raw-data/data_aggregator/: aggregator.py  defillama_data.py  derived_data.py  fetching_data.py
raw-data/data_aggregator/defillama_operators/: dexs_overview.py  fee.py  protocols.py  stablecoins.py  tvl.py
raw-data/mongo/: schemas.py
raw-data/prefect/: deployments.py  monitors.py
raw-data/services/: defillama.py
raw-data/utils/: __init__.py
strategy_engine/: .env.example  .gitignore  app-config-template.yaml  compose.yaml  dockerfile  pyproject.toml
strategy_engine/agents/: agents.py  base_agent.py  model.py  models.py  orchestrator.py  result_processor.py
strategy_engine/agents_tools/: verifier_tools.py
strategy_engine/api/: api_main.py  errors.py  models.py  rebalance_strategy.py
strategy_engine/config/: __init__.py  agents.py  mcp.py  models.py  settings.py
strategy_engine/database/: models.py  mongodb.py
strategy_engine/prompts/: agents.py  orchestrator.py  system_prompts.py
strategy_engine/utils/: helpers.py  models.py  singleton_base.py
vault-management/: Dockerfile  app-config-template.yaml  docker-compose.yaml  pyproject.toml  strategy.json
vault-management/api/: api_main.py
vault-management/api/router/: strategy.py  transaction.py  user.py  vault.py
vault-management/backend/: strategy.py  transaction.py  user.py  vault.py
vault-management/clients/: __init__.py
vault-management/configs/: __init__.py  strategy_agent_config.py
vault-management/hooks/: error.py
vault-management/llm/: strategy_updated.py
vault-management/mongo/: schemas.py
vault-management/services/: http_request.py
vault-management/utils/: hasher.py  timestamp.py
