[project]
name = "agent-universe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beanie>=2.0.0",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.10",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.33",
    "numpy>=2.2.6",
    "pydantic>=2.11.7",
    "pymongo>=4.14.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
]
